<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="false"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/inputTextDecrypt"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_textbox"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/edit_text_placeholder"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect|textMultiLine"
            android:isScrollContainer="true"
            android:overScrollMode="ifContentScrolls"
            android:padding="20dp"
            android:textColor="@color/cmd_green"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@color/cmd_green"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toTopOf="@+id/decryptMethod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Spinner
            android:id="@+id/decryptMethod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:background="@color/lightBlue"
            app:layout_constraintBottom_toTopOf="@+id/menu_unified_native_ad_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/menu_unified_native_ad_view"
            layout="@layout/unified_native_ad_view"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="60dp"
            android:paddingTop="50dp"
            android:paddingRight="60dp"
            android:paddingBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/decryptButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/decryptButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="monospace"
            android:paddingLeft="60dp"
            android:paddingTop="50dp"
            android:paddingRight="60dp"
            android:paddingBottom="50dp"
            android:text="@string/decrypt_button"
            android:textColor="@color/cmd_green"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/labelForOutputText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/labelForOutputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/outputTextDecrypt"
            android:text="@string/label_for_output_text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/outputTextDecrypt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/outputTextDecrypt"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_textbox"
            android:ems="10"
            android:focusable="false"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|none"
            android:padding="20dp"
            android:textColor="@color/cmd_green"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@color/cmd_green"
            app:layout_constraintBottom_toTopOf="@+id/copyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/copyButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="65dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="monospace"
            android:paddingLeft="60dp"
            android:paddingTop="50dp"
            android:paddingRight="60dp"
            android:paddingBottom="50dp"
            android:text="@string/copy_button"
            android:textColor="@color/cmd_green"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>